--- a/css/agency.css
+++ b/css/agency.css
@@ -390,7 +390,7 @@ section h3.section-subheading {
   text-transform: none;
 }
 
-.player {
+.player .audio-wrapper {
   text-align:center;
 }
 .player > div.audio-wrapper,
@@ -403,11 +403,19 @@ section h3.section-subheading {
 }
 
 .player audio  {
-  width: 90%
+  width: 100%;
+}
+.player {
+  background: rgba(12,12,12,0.9);
+  padding: 50px 10px;
+  border-radius: 4px;
 }
 
 #playlist {
   list-style-type: none;
+  -webkit-padding-start: 0;
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
 }
 
 #playlist li a {
@@ -423,6 +431,9 @@ section h3.section-subheading {
   width: 100%;
   height: 100%;
   text-decoration: none;
+}
+#playlist .audio-track a .fa-play {
+  padding: 0 20px;
 }
 #playlist .audio-track {
   font-size: 2em;
