--- a/css/agency.css
+++ b/css/agency.css
@@ -827,13 +827,18 @@ body {
 .slide-control {
   position: absolute;
   top: 50%;
+  -webkit-transform: translateY(50%);
+  -moz-transform: translateY(50%);
+  -ms-transform: translateY(50%);
+  -o-transform: translateY(50%);
+  transform: translateY(50%);
   color: #fff;
   z-index: 2000;
 }
 .prev-slide {
-  left: 0;
+  left: 30px;
 
 }
 .next-slide {
-  right: 0;
+  right: 30px;
 }
